--- a/views/index.haml
+++ b/views/index.haml
@@ -1,13 +1,16 @@
 !!!
 
+%link{rel: 'stylesheet', href: '/css/style.css'}
 %script{src: '//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js'}
 %script{src: '/javascripts/underscore-min.js'}
 %script{src: '/javascripts/d3.v2.js'}
 %script{src: '/javascripts/cubism.v1.js'}
-%script{src: '/javascripts/client.js'}
 
-%h1 hi
-#connections
- %span.count 0
- connections
+%body
+  %script{src: '/javascripts/client.js'}
+
+  %h1 datascope
+  #connections
+    %span.count 0
+    connections
 
