simple query showing

--- a/views/index.haml
+++ b/views/index.haml
@@ -10,4 +10,7 @@
   %script{src: '/javascripts/client.js'}
 
   %h1 datascope
+  #cubism
+  %h2 queries (last ten seconds)
+  #queries{style: 'font-family: monaco, monspace'}
 
